--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.19.1",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3"
+    "tslint": "^5.18.0"
   },
   "dependencies": {
+    "typescript": "^3.5.3",
     "@types/express": "^4.17.0",
     "express": "^4.17.1"
   }
