--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   },
   "author": "Dan Miller",
   "license": "ISC",
+  "engines": {
+    "node": "10.14.2"
+  },
   "devDependencies": {
     "nodemon": "^1.19.1",
     "tslint": "^5.18.0"
   },
   "dependencies": {
-    "typescript": "^3.5.3",
     "@types/express": "^4.17.0",
-    "express": "^4.17.1"
+    "@types/pg": "^7.4.14",
+    "express": "^4.17.1",
+    "pg": "^7.12.0",
+    "typescript": "^3.5.3"
   }
 }
