--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "tslint": "^5.18.0"
   },
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.17.0",
     "@types/pg": "^7.4.14",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pg": "^7.12.0",
     "typescript": "^3.5.3"
